# communication-system

./: .gitignore  README.md
aws-sam/: .README.md  README.md  template.yaml
aws-sam/hello-world/: Dockerfile  app.js  package.json
electron/: README.md  forge.config.js  index.html  package.json  tsconfig.electron.json  tsconfig.json
electron-ts/: .gitignore  README.md  forge.config.js  index.cjs  index.html  main.cjs  package.json  tsconfig.json
electron-ts/src/: index.tsx  main.ts
electron-ts/src/main/: main.ts
electron-ts/src/render/: app.tsx
electron/src/: app.tsx  commentbox.tsx  index.html  index.tsx  main.ts  navbar.tsx
qt/: .gitignore  .pdm.toml  Makefile  README.md  environment.yml  pyproject.toml  pyrightconfig.json
react-common/: README.md  commentbox.tsx  navbar.tsx  package.json  tsconfig.json
react-common/src/: commentbox.tsx  feed.tsx  navbar.tsx  single-feed.tsx
react-common/src/demo-page/: index.tsx  smoker-logo.tsx  titlebar.tsx
serverless/: .gitignore  README.md  _serverless.yml  package.json  serverless.ts  serverless.yml  tsconfig.json
serverless/src/: example_async_handler.ts  example_sync_handler.ts  getFeed.ts  postFeed.ts
tauri/: .gitignore  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
tauri/assets/: style.css
tauri/src/: App.tsx  main.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
