[project]
name = "qt"
version = "0.0.0"
description = ""
authors = [
    {name = "artizon-io", email = "mingsum.sam@gmail.com"},
]
dependencies = [
    "PySide6>=6.4",
]
requires-python = ">=3.10, <3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
